giao dien Sign in/Sign up

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css"/>
     <script src="https://use.fontawesome.com/b22aa26a23.js"></script>
     <script src="https://kit.fontawesome.com/e27e52cd8a.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>IT Store</title>
 </head>
 
 <body>
@@ -27,6 +27,7 @@
     <div id="root"></div>
     <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
     <script src="%PUBLIC_URL%/js/bootstrap"></script>
+
 </body>
 
 </html>
