--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css"/>
     <script src="https://use.fontawesome.com/b22aa26a23.js"></script>
     <script src="https://kit.fontawesome.com/e27e52cd8a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/src/owl.carousel.min.css">
+    <link rel="stylesheet" href="/src/owl.theme.default.min.css">
     <title>IT Store</title>
 </head>
 
@@ -27,7 +29,8 @@
     <div id="root"></div>
     <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
     <script src="%PUBLIC_URL%/js/bootstrap"></script>
-
-</body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/src/owl.carousel.min.js"></script>
+  </body>
 
 </html>
