--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -17,10 +17,15 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css"/>
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+  integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+  crossorigin="anonymous"
+/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <script src="https://use.fontawesome.com/b22aa26a23.js"></script>
     <script src="https://kit.fontawesome.com/e27e52cd8a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/src/owl.carousel.min.css">
-    <link rel="stylesheet" href="/src/owl.theme.default.min.css">
     <title>IT Store</title>
 </head>
 
@@ -29,8 +34,7 @@
     <div id="root"></div>
     <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
     <script src="%PUBLIC_URL%/js/bootstrap"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/src/owl.carousel.min.js"></script>
-  </body>
+
+</body>
 
 </html>
